# SmartCard

./: README.md  iTunesArtwork  log.txt
Classes/Controllers/: FirstViewController.h  FirstViewController.mm
Classes/Delegates/: AppDelegate.h  AppDelegate.m
Classes/Performers/: CardBytesAnalysis.cpp  CardBytesAnalysis.hpp
Classes/Performers/EMV/libchipcard-5.0.2/: AUTHORS  COPYING  ChangeLog  Doxyfile.in  Makefile.am  Makefile.cvs  Makefile.in  NEWS  README  TODO  aclocal.m4  chipcard-config.in.in  config.h.in  configure  configure.ac  libchipcard.spec  libchipcard.spec.in
Classes/Performers/EMV/libchipcard-5.0.2/data/: Makefile.am  Makefile.in
Classes/Performers/EMV/libchipcard-5.0.2/data/drivers/: Makefile.am  Makefile.in  README
Classes/Performers/EMV/libchipcard-5.0.2/data/drivers/posix/: Makefile.am  Makefile.in
Classes/Performers/EMV/libchipcard-5.0.2/data/drivers/posix/cyberjack_pcsc/: Makefile.in  card.xml  cyberjack_pcsc.xml
Classes/Performers/EMV/libchipcard-5.0.2/data/drivers/posix/generic_pcsc/: Makefile.am  Makefile.in  card.xml
Classes/Performers/EMV/libchipcard-5.0.2/data/drivers/win32/: Makefile.am  Makefile.in
Classes/Performers/EMV/libchipcard-5.0.2/data/drivers/win32/cyberjack_ctapi/: Makefile.am  Makefile.in  card.xml  cyberjack_pcsc.xml  kvk.xml  processorcard.xml
Classes/Performers/EMV/libchipcard-5.0.2/doc/: CERTIFICATES  CONFIG  IPCCOMMANDS  Makefile.am  Makefile.in  apidoc.h
Classes/Performers/EMV/libchipcard-5.0.2/etc/: Makefile.am  Makefile.in  chipcardc.conf.example
Classes/Performers/EMV/libchipcard-5.0.2/m4/: Makefile.am  Makefile.in  acx_compile_warn.m4  libsysfs.m4  libusb.m4  opensc.m4  pcsc.m4
Classes/Performers/EMV/libchipcard-5.0.2/src/: Makefile.am  Makefile.in
Classes/Performers/EMV/libchipcard-5.0.2/src/PCSC/: Makefile.am  Makefile.in  pcsclite.h  reader.h
Classes/Performers/EMV/libchipcard-5.0.2/src/ct/: Makefile.am  Makefile.in
Classes/Performers/EMV/libchipcard-5.0.2/src/ct/ddvcard/: Makefile.am  Makefile.in  ddvcard.c  ddvcard.xml.in  ddvcard_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/ct/starcoscard/: Makefile.am  Makefile.in  starcoscard.c  starcoscard.xml.in  starcoscard_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/: Makefile.am  Makefile.in  chipcard.h.in  version.h  version.h.in
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/: Makefile.am  Makefile.in  libtest.c  ressource.rc.in
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/base/: Makefile.am  Makefile.in  card.c  card.h  card_iso.c  card_l.h  card_p.h  client.c  client_cmd.c  client_l.h  client_p.h  client_xml.c  tlv.c  tlv_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/cards/: Makefile.am  Makefile.in  card.xml  hidata.xml  hiinsurancedata.c  hiinsurancedata_l.h  hiinsurancedata_p.h  hipersonaldata.c  hipersonaldata_l.h  hipersonaldata_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/cards/ddvcard/: Makefile.am  Makefile.in  ddvcard.c  ddvcard_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/cards/egkcard/: Makefile.am  Makefile.in  egkcard.c  egkcard_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/cards/geldkarte/: Makefile.am  Makefile.in  geldkarte.c  geldkarte_blog.c  geldkarte_blog_l.h  geldkarte_blog_p.h  geldkarte_llog.c  geldkarte_llog_l.h  geldkarte_llog_p.h  geldkarte_p.h  geldkarte_values.c  geldkarte_values_l.h  geldkarte_values_p.h  types.xml
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/cards/kvkcard/: Makefile.am  Makefile.in  kvkcard.c  kvkcard_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/cards/memorycard/: Makefile.am  Makefile.in  memorycard.c  memorycard_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/cards/processorcard/: Makefile.am  Makefile.in  processorcard.c  processorcard_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/cards/starcos/: Makefile.am  Makefile.in  starcos.c  starcos_keydescr.c  starcos_keydescr_l.h  starcos_keydescr_p.h  starcos_p.h  types.xml
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/cards/zkacard/: Makefile.am  Makefile.in  app.xml  card.xml  zkacard.c  zkacard.h  zkacard_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/client/ct/: Makefile.am  Makefile.in  ct_card.c
Classes/Performers/EMV/libchipcard-5.0.2/src/lib/sharedstuff/: Makefile.am  Makefile.in  driverinfo.c  driverinfo_p.h  misc.c  msgengine.c  msgengine_l.h  msgengine_p.h  pininfo.c  pininfo.xml  pininfo_l.h  pininfo_p.h
Classes/Performers/EMV/libchipcard-5.0.2/src/tools/: Makefile.am  Makefile.in
Classes/Performers/EMV/libchipcard-5.0.2/src/tools/cardcommander/: Makefile.am  Makefile.in  README  cardcommander.cpp
Classes/Performers/EMV/libchipcard-5.0.2/src/tools/chipcard-tool/: Makefile.am  Makefile.in  getatr.c  global.h  main.c
Classes/Performers/EMV/libchipcard-5.0.2/src/tools/geldkarte/: Makefile.am  Makefile.in  global.h  main.c
Classes/Performers/EMV/libchipcard-5.0.2/src/tools/kvkcard/: Makefile.am  Makefile.in  README  global.h  main.c  psvd.c  rdpd.c  rdvd.c  read.c
Classes/Performers/EMV/libchipcard-5.0.2/src/tools/memcard/: Makefile.am  Makefile.in  global.h  main.c
Classes/Performers/EMV/libchipcard-5.0.2/tutorials/: Makefile.am  Makefile.in  README  examplecard.c  examplecard.h  examplecard_p.h  tutorial1a.c  tutorial1b.c  tutorial1c.c  tutorial2.c  tutorial3.c  tutorials.h
Documentation/: Estructura.pptx
Documentation/Especificaciones al 31-octubre-2011/: Especificaciones de Cat†laogos para  H2H Eglobal  Remesas Familiares.xls  ISO-COP311011 Consulta Orden de Pago.doc  ISO-CRE090511 C¢digos de Respuesta.doc  ISO-DCH220611 Dep¢sito a Cheques.doc  ISO-DEF220611 Disposici¢n de Efectivo.doc  ISO-DPT220611 Dep¢sito a Tarjetas.doc  ISO-LOP220611 Liquidaci¢n Orden de Pago.doc  ISO-PCH220611 Pago de Cheques.doc  ISO-RDI220611 Reversa de Disposiciones.doc  ISO-REC 150911 Reconexi¢n.doc  (+2 more)
OtherSources/: ProjectConstants.h  SmartCard-Prefix.pch  main.m
Resources/: SmartCard-Info.plist
SmartCard.xcodeproj/: project.pbxproj
(+26 files in other folders)
